[package]
name = "orx-concurrent-recursive-iter"
version = "1.0.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A concurrent iterator that can be extended recursively by each of its items."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-iter/"
keywords = ["concurrency", "iterator", "iteration", "recursive", "parallelism"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-concurrent-iter = { version = "3.2.0", default-features = false }
orx-pinned-vec = { version = "3.20.0", default-features = false }
orx-split-vec = { version = "3.21.0", default-features = false }
orx-fixed-vec = { version = "3.21.0", default-features = false }
# orx-concurrent-queue = { version = "1.1.0", default-features = false }
orx-concurrent-queue = { git = "https://github.com/orxfun/orx-concurrent-queue", branch = "expose-num-popped" }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }
orx-concurrent-bag = { version = "3.1.0" }
rand_chacha = { version = "0.9.0" }
rand = { version = "0.9.2" }
test-case = { version = "3.3.1" }
